test fix for modal scrolling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -833,10 +833,11 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 	
 	.modal-content{
 		max-height: 70%;
-		overflow: auto;
+		overflow: scroll;
 		padding: 0 15%;
 		text-align: left;
 		font-family: Avenir, Helvetica, sans-serif;
+		-webkit-overflow-scrolling: touch;
 	}
 	
 	.modal-overlay {
